{
    "version": 1,
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Game",
            "id": "10c32832-57b3-4593-9e61-1ebe0b58633b",
            "actions": [
                {
                    "name": "MouseLeftDown",
                    "type": "Button",
                    "id": "002b1271-b97d-413d-8252-a1e4304a55c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchInputs",
                    "type": "Button",
                    "id": "e1625e99-d22f-4f0d-96dc-686a95caa894",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ac7116a-b60a-4b19-9489-9a9e545a2550",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ff0a911-6088-4994-8336-ce9dfe5f8ffa",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInputs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}